Fix: Correction URL fichier vcf dans template contact

--- a/app/templates/main/contact.html
+++ b/app/templates/main/contact.html
@@ -81,7 +81,7 @@
                     
                     <!-- Bouton de téléchargement -->
                     <div class="text-center mt-4 pt-3 border-top">
-                        <a href="{{ url_for('static', filename='contact.vcf') }}" 
+                        <a href="/static/contact.vcf" 
                            download="Fee_Maison.vcf"
                            class="btn btn-primary btn-lg px-5">
                             <i class="bi bi-download me-2"></i>
