Feat: Dashboard gestion complète des livreurs
- Statistiques par livreur (date, nombre commandes, lieux, CA)
- Filtrage par date et livreur
- Détails des commandes par livreur (collapsible)
- Affichage des zones de livraison
- Calcul du CA et frais de livraison
- Lien dans le menu Gestion

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -70,6 +70,9 @@
                             <li><a class="dropdown-item" href="{{ url_for('deliverymen.list_deliverymen') }}">
                                 <i class="bi bi-truck me-2"></i>Livreurs
                             </a></li>
+                            <li><a class="dropdown-item" href="{{ url_for('deliverymen.deliverymen_dashboard') }}">
+                                <i class="bi bi-graph-up me-2"></i>Gestion Livreurs
+                            </a></li>
                             <li><a class="dropdown-item" href="{{ url_for('delivery_zones.manage_zones') }}">
                                 <i class="bi bi-geo-alt me-2"></i>Livraison - Communes
                             </a></li>
